# BALANCE-pyexcel

./: .clineignore  .env.example  .gitattributes  .gitignore  20250421_2115_BALANCE-pyexcel_CommitSummary-2.txt  20250421_2115_BALANCE-pyexcel_CommitSummary-3.txt  20250421_2115_BALANCE-pyexcel_CommitSummary.txt  20250422_BALANCE-pyexcel_CommitSummary-2.txt  20250422_BALANCE-pyexcel_CommitSummary.txt  AGENTS.md  BALANCE-pyexcel.pbix  BALANCE-pyexcel.xlsm  BALANCE-template.temp.xlsx  BALANCE-template.xlsm  CHANGELOG.md  CLEANUP_MANIFEST.md  COMMIT_PLANNING.md  COMPREHENSIVE_PROJECT_STATUS.md  CONTRIBUTING.md  Check-RequiredFiles.ps1  Comprehensive_Transaction_Data_Analyzer.py  DEVELOPMENT_NOTES.md  HOTFIX_SUMMARY_20250608.md  IMPLEMENTATION_ROADMAP.md  ImportFromTemp.bas  LICENSE  MIGRATION_COMPLETED.md  MIGRATION_COMPLETE_REPORT.md  NEXT_STEPS_IMMEDIATE.md  PIPELINE_COMMANDS.md  PROJECT_ENHANCEMENT_SUMMARY.md  README.md  REPOSITORY_CLEANUP_PLAN.md  REPOSITORY_CLEANUP_SUMMARY.md  Run-Analysis.ps1  Run-ComprehensiveAnalyzer.ps1  Run-ComprehensiveAnalyzer.py  _phase2_failures.txt  _temp_diag_test.py  analysis_temp.py  (+161 more)
.claude/: settings.local.json
_ARCHIVE_TO_DELETE/: 2025-05_audit_OLD_TO_DELETE.parquet  CLEANUP_SUMMARY.md  README_ARCHIVE.md  refresh_balance.bat
analysis_output/: alt_texts_v2.3.json  analyzer_diagnostic.json  comprehensive_analysis_results.json  dashboard_v2.3.html  data_quality_issues_PARTIAL_FAILURE_v2.3.csv  data_quality_issues_log_v2.3.csv  executive_summary_v2.3.csv  financial_analysis_report_v2.3.xlsx  line_by_line_reconciliation_v2.3.csv  master_ledger_v2.3.csv
archive/: ARCHIVE_CONTENTS.md  README.md
artifacts/: 2025-05_audit_full.csv  2025-05_meta_rows.parquet  _latest_pytest.xml  balance_final.parquet  complete_audit_trail_2025-06-21.csv  detailed_audit_trail.csv  ingestion_profile.json  output.xlsx  zero_value_profile.json
audit_reports/: balance_summary_20250803_220649.csv  balance_summary_20250816_064731.csv  complete_audit_trail_20250622_205514.csv  complete_audit_trail_20250803_220650.csv  complete_audit_trail_20250803_220858.csv  complete_audit_trail_20250816_064731.csv
comprehensive_analysis_results/: analysis_summary.txt  full_column_analysis.json
config/: balance_analyzer.yaml  balance_analyzer_rules_analysis.json  business_rules.yml  generated_sharing_rules.json  placeholder.txt
csv_inbox/: README.md  ryan&jordyn-monarch-020250809.csv  ryan&jordyn-rocket-020250809.csv
data/: Consolidated_Rent_Allocation_20250527.csv  Consolidated_Rent_Allocation_CORRECTED_20250718.csv  Expense_History_20250527.csv  Rent_Allocation_20250527.csv  Rent_History_20250527.csv  TRULY_CORRECTED_Rent_Allocation_20250718.csv  Transaction_Ledger_20250527.csv  Zelle_From_Jordyn_Final.csv
debug_fresh/: 02b_rent_clean.csv
debug_full/: 02b_expenses_clean.csv  03c_baseline_reconciled.csv
debug_output/: 01a_expense_history_raw.csv  01a_expenses_raw.csv  01a_ledger_raw.csv  01a_rent_raw.csv  01c_rent_allocation_raw.csv  01d_rent_history_raw.csv  02a_merged_expenses_ledger.csv  02b_expenses_clean.csv  02b_rent_clean.csv  03a_processed_expenses.csv  03a_settlements_tagged.csv  03b_two_x_applied.csv  03e_rent_budget_variance.csv  04_master_ledger.csv
debug_reports/: debug_BALANCE_-_Monarch_Money_-_041225_20250525_205019.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUSINESS_RULES.md  CHANGELOG.md  CLEANUP_REPORT.md  CONFIGURATION_GUIDE.md  Complete Implementation Guide - Fixing Your Pipeline Once and For All.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  GUI_MODERNIZATION_GOLD_STANDARD.md  IMPROVEMENTS_v1.0.3.md  PIPELINE_IMPROVEMENTS_v1.0.4.md  PIPELINE_STATUS.md  PRODUCTION_OPERATIONS.md  PROJECT_SUMMARY.md  Understanding and Using the commit-files.ps1 Script - A Comprehensive Guide.md  aggregator_deduplication.md  balance_analysis_report_20250612_235259.txt  cli_usage.md  developer_setup.md  dispute_analyzer_guide.md  index.md  manual_header_validation.md  power_bi_workflow.md  quick_start.md  scripts_guide.md  sign_convention_analysis.md  sync_functionality.md
fixtures/: dummy_monarch_data.csv  min_demo.csv  test_fixture_rent.csv
legacy_scripts/: audit_all_sources.py  canonical_schema_v3.py  fix_mypy_errors_dd951b6b.py  smart_csv_consolidator.py
output/: balance_data.xlsx  balance_final.parquet  balances.xlsx  cleaned_transactions.parquet  financial_data_flexible.parquet  monarch_debug.parquet  monarch_trace.parquet  sample_test_results.xlsx  transactions_cleaned_20250809_015418.xlsx  transactions_cleaned_20250809_020010.parquet  transactions_cleaned_20250809_020010.xlsx  transactions_cleaned_20250809_235509.csv  transactions_cleaned_20250809_235509.xlsx  transactions_for_powerbi_20250809_013502.csv  transactions_for_powerbi_20250809_013502.parquet  transactions_for_powerbi_20250809_013502.xlsx
reports/: DEPLOYMENT_COMPLETE.md  MIGRATION_COMPLETE_REPORT.md
rules/: canonical_schema.yml  generic_csv.yaml  jordyn_chase_checking_v1.yaml  jordyn_discover_card_v1.yaml  jordyn_pdf_v1.yaml  jordyn_wells_v1.yaml  jordyn_wellsfargo_visa_v1.yaml  merchant_lookup.csv  ryan_monarch_v1.yaml  ryan_monarch_v2.yaml  ryan_rocket_v1.yaml  ryan_rocket_v2.yaml  schema_registry.yml
samples/: Connect_DuckDB_Parquet.odc
scripts/: Run-ComprehensiveAnalyzer.py  analyze_remaining_issues.py  analyzer.py  balance_analyzer_quick_test.py  comprehensive_balance_analyzer.py  diag_row_counts.py  diagnose_analyzer_fixed.py  diagnose_cli_import.py  diagnose_rent_issue.py  diagnostic_baseline.py  fix_summary.py  generate_audit_report.py  phase01_generate.py  preview_data.py  print_500_510_snippet.py  process_pdfs.py  quick_check.py  run_baseline.py  smoke_demo.py  verify_balance.py
src/: README.md  __init__.py  minimal_pipeline.py
temp_scripts/: placeholder.txt
test_debug_output/: 02b_rent_clean.csv
tests/: balance_analyzer_test.py  conftest_skip_legacy.py  placeholder.txt  test_cli_full_flow.py  test_cli_integration.py  test_cli_retry.py  test_cross_schema.py  test_csv_consolidator.py  test_errors.py  test_fatal_schema.py  test_integrity.py  test_master_columns.py  test_sync.py  (+16 more)
(+280 files in other folders)
