[tool.poetry]
name = "balance-pyexcel-pipeline"
version = "0.1.0"
description = "Python ETL pipeline for the BALANCE-pyexcel shared finance tracker."
# Use the standard list format for authors under tool.poetry
authors = ["Ryan Zimmerman <rzimmerman2022@gmail.com>"] # Updated email
readme = "README.md"
# Define where the package source code lives
packages = [{include = "balance_pipeline", from = "src"}]

[tool.poetry.dependencies]
# Specify the compatible Python version range
python = ">=3.11,<3.14" # Pinned more specifically than just ^3.11
# List main runtime dependencies found by 'poetry add'
pandas = "^2.2.3"
python-dotenv = "^1.1.0"
# Added PyYAML dependency needed for reading schema_registry.yml
PyYAML = "^6.0.1" # Assumes latest stable version, adjust if needed
# Added openpyxl for Excel file reading/writing in CLI
openpyxl = "^3.1"   # <<< Make sure this line looks like this
# Optional fallback writer for Parquet if pyarrow isn't available/compatible
fastparquet = { version = "^2024.5", optional = true }
camelot-py = "^0.11.0" # For PDF table extraction (removed 'cv' extra)
pdfplumber = { version = "^0.11", extras = ["no-image"] } # Use no-image extra to avoid pdftopng
duckdb = "^1.2.2"
pyarrow = "^16.0.0" # Explicit dependency for Parquet engine
opencv-python = "^4.11.0.86"

[tool.poetry.extras] # Keep extras section if other optional dependencies exist or might be added
# parquet = ["pyarrow"] # pyarrow is now a direct dependency

[tool.poetry.group.dev.dependencies]
# Define development-only dependencies under a SINGLE group header
pytest = "^8.3.5"
pytest-cov = "^6.1.1" # Using version from your later block
black = "^25.1.0" # Using version from your later block
ruff = "==0.4.*" # Pinning Ruff version
# Dependencies from the second block in your paste (excluding redundant python-dotenv)
mkdocs-material = "^9.5"
mkdocstrings-python = "^1.9"
pre-commit = "^3.7"

[tool.poetry.scripts]
balance-pyexcel = "balance_pipeline.cli:main"
balance-pyexcel-dev = "balance_pipeline.cli:dev_main"
balance-merchant = "balance_pipeline.cli_merchant:main_merchant"

[build-system]
# Standard build system configuration for Poetry projects
requires = ["poetry-core>=1.8.0"] # Use a reasonably recent version
build-backend = "poetry.core.masonry.api"

# Optional: Add tool-specific configurations below later if needed
# [tool.ruff]
# Ignore unused-import warnings in legacy modules
[tool.ruff]
[tool.ruff.lint]
ignore = ["F401"]

[tool.ruff.format]
exclude = ["*"]
# [tool.black]
# ...
# [tool.pytest.ini_options]
# ...
